--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -14,6 +14,7 @@
         {{ .UserData.name }}:<br />
         <textarea></textarea>
         <input type="submit" value="Send" />
+        or <a href="/logout">sign out</a>
     </form>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -29,7 +30,7 @@
                     alert("Error: There is no socket connection."); 
                     return false;
                 }
-                socket.send(msgBox.val());
+                socket.send( JSON.stringify( { "Message": msgBox.val() } ) );
                 msgBox.val("");
                 return false;
             });
@@ -42,7 +43,17 @@
                     alert("Connection has been closed.");
                 }
                 socket.onmessage = function(e) {
-                    messages.append($("<li>").text(e.data));
+                    var msg = JSON.parse(e.data);
+                    messages.append(
+                        $("<li>").append(
+                            $("<img>").css({
+                                width: 50,
+                                verticalAlign: "middle"
+                            }).attr("src", msg.AvatarURL),
+                            $("<strong>").text(msg.Name + ": "), 
+                            $("<span>").text(msg.Message)
+                        )
+                    );
                 }
             }
         });
